add a LICENSE file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "kangarootwelve-xkcp"
 version = "0.1.0"
 authors = ["Jack O'Connor <oconnor663@gmail.com>"]
+license-file = "LICENSE"
 edition = "2018"
 
 [dependencies]
