--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         override: true
     - run: cargo test
     - run: rustup target add i686-unknown-linux-gnu
-    - run: CFLAGS=-m32 cargo test --target i686-unknown-linux-gnu
+    - run: cargo test --target i686-unknown-linux-gnu
     # Test benchmarks. RUSTC_BOOTSTRAP=1 lets this run on non-nightly toolchains.
     - run: cargo test --benches
       env:
