--- a/k12sum/Cargo.toml
+++ b/k12sum/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "1.0.27"
 clap = { version = "2.33.0", default-features = false }
 hex = "0.4.2"
 kangarootwelve-xkcp = { path = ".." }
+memmap = "0.7.0"
 
 [dev-dependencies]
 assert_cmd = "0.12.1"
