--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
         profile: minimal
         override: true
     - run: cargo test
+    - run: cargo test --release
     - name: test k12sum
       run: cargo test
       working-directory: ./k12sum
