Cargo.toml metadata for k12sum

--- a/k12sum/Cargo.toml
+++ b/k12sum/Cargo.toml
@@ -2,6 +2,10 @@
 name = "k12sum"
 version = "0.1.0"
 authors = ["Jack O'Connor <oconnor663@gmail.com>"]
+description = "A command line implementation of the KangarooTwelve hash function"
+repository = "https://github.com/oconnor663/kangarootwelve_xkcp.rs"
+license-file = "../LICENSE"
+readme = "../README.md"
 edition = "2018"
 
 [dependencies]
