--- a/k12sum/Cargo.toml
+++ b/k12sum/Cargo.toml
@@ -14,8 +14,8 @@ clap = { version = "2.33.0", default-features = false }
 hex = "0.4.2"
 kangarootwelve_xkcp = { version = "0.1", path = ".." }
 memmap = "0.7.0"
+wild = "2.0.3"
 
 [dev-dependencies]
-assert_cmd = "0.12.1"
 duct = "0.13.3"
 tempfile = "3.1.0"
