--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,9 @@ on:
     # not on tags
   pull_request:
 
+env:
+  RUSTFLAGS: "-D warnings"
+
 jobs:
   cargo_tests:
     name: ${{ matrix.os }} ${{ matrix.channel }}
