--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ arrayvec = "0.5.1"
 constant_time_eq = "0.1.5"
 
 [dev-dependencies]
+digest = "0.9.0"
 hex = "0.4.2"
+k12 = "0.1.0"
 page_size = "0.4.2"
 rand = "0.7.3"
 
