--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,15 @@ readme = "README.md"
 keywords = ["kangarootwelve", "k12"]
 
 [dependencies]
-arrayvec = "0.5.1"
-constant_time_eq = "0.1.5"
+arrayvec = "0.7.6"
+constant_time_eq = "0.4.2"
 
 [dev-dependencies]
-digest = "0.9.0"
+digest = { version = "0.10.7", features = ["mac"] }
 hex = "0.4.2"
-k12 = "0.1.0"
-page_size = "0.4.2"
-rand = "0.7.3"
+k12 = "0.3.0"
+page_size = "0.6.0"
+rand = "0.9.2"
 
 [build-dependencies]
 cc = "1.0.50"
